--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,9 @@
   <title>Pizzeria</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,300i,700%7COswald:300,500,700&amp;subset=latin-ext" rel="stylesheet">
   <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <link rel="stylesheet" href="/vendor/bootstrap-grid.css">
   <link rel="stylesheet" href="vendor/range-slider.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -21,6 +23,7 @@
           <h2 class="logo__subtitle">the best homemade Italian food</h2>
         </div>
         <div class="main-nav">
+          <a href="#home">Home</a>
           <a href="#order">Order</a>
           <a href="#booking">Booking</a>
         </div>
@@ -62,6 +65,9 @@
   </header>
 
   <div id="pages">
+    <section id="home">
+      <div class="home-wrapper container"></div>
+    </section>
     <section id="order">
       <div id="product-list" class="product-list container"></div>
     </section>
@@ -69,6 +75,121 @@
       <div class="booking-wrapper container"></div>
     </section>
   </div>
+
+  <script id="template-home" type="text/x-handlebars-template">
+    <div class="page-wrapper">
+      <section class="section-container">
+        <div class="row">
+          <div class="small-boxes-wrapper col-12">
+            <div class="row">
+              <div class="order-online col-6 small-boxes">
+                <h2>ORDER ONLINE</h2>
+                <div class="book-text-wrapper">
+                  <div class="book-text">Delicious food delivered to your door!</div>
+                </div>
+              </div>
+              <div class="book-a-table col-6 small-boxes">
+                <h2>BOOK A TABLE</h2>
+                <div class="book-text-wrapper">
+                  <div class="book-text">Book your table!</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="opening-hours col-12 big-box">
+            <h2>OPENING HOURS:</h2>
+            <h4>TUE-SUN, 12PM - 12AM</h4>
+          </div>
+        </div>
+      </section>
+
+      <section class="carousel section-container">
+          <div class="main-carousel">
+            <div class="container carousel-cell">
+              <div class="row">
+                <div class="col-4 image">
+                  <img src="images/home/pizza-3.jpg">
+                </div>
+                <div class="col-8 carousel-cell-text-wrapper">
+                  <h2>AMAZING SERVICE!</h2>
+                  <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus blandit faucibus ipsum, at facilisis purus ornare ac.<br></p>
+                  <h3>Margaret Gostive</h3>
+                </div>
+              </div>
+            </div>
+            <div class="container carousel-cell">
+              <div class="row">
+                <div class="col-4 image">
+                  <img src="images/home/pizza-10.jpg">
+                </div>
+                <div class="col-8 carousel-cell-text-wrapper">
+                  <h2>AMAZING SERVICE!</h2>
+                  <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus blandit faucibus ipsum, at facilisis purus ornare ac.<br></p>
+                  <h3>Margaret Gostive</h3>
+                </div>
+              </div>
+            </div>
+            <div class="container carousel-cell">
+              <div class="row">
+                <div class="col-4 image">
+                  <img src="images/home/pizza-11.jpg">
+                </div>
+                <div class="col-8 carousel-cell-text-wrapper">
+                  <h2>AMAZING SERVICE!</h2>
+                  <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus blandit faucibus ipsum, at facilisis purus ornare ac.<br></p>
+                  <h3>Margaret Gostive</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+
+      </section>
+      <section class="row six-cards section-container">
+          <div class="card card-left">
+            <div class="box-card">
+              <img src="images/home/pizza-4.jpg">
+              <a href="#"><i class="fas fa-heart"></i></a>
+              <a href="#"></a><i class="fas fa-share-alt share-i"></i></a>
+            </div>
+          </div>
+          <div class="card card-center">
+            <div class="box-card">
+              <img src="images/home/pizza-5.jpg">
+              <a href="#"><i class="fas fa-heart"></i></i></a>
+              <a href="#"></a><i class="fas fa-share-alt share-i"></i></a>
+            </div>
+          </div>
+          <div class="card card-right">
+            <div class="box-card">
+              <img src="images/home/pizza-6.jpg">
+              <a href="#"><i class="fas fa-heart"></i></a>
+              <a href="#"></a><i class="fas fa-share-alt share-i"></i></a>
+            </div>
+          </div>
+          <div class="card card-left ">
+            <div class="box-card">
+              <img src="images/home/pizza-7.jpg">
+              <a href="#"><i class="fas fa-heart"></i></a>
+              <a href="#"></a><i class="fas fa-share-alt share-i"></i></a>
+            </div>
+          </div>
+          <div class="card card-center">
+            <div class="box-card">
+              <img src="images/home/pizza-8.jpg">
+              <a href="#"><i class="fas fa-heart"></i></a>
+              <a href="#"></a><i class="fas fa-share-alt share-i"></i></a>
+            </div>
+          </div>
+          <div class="card card-right">
+            <div class="box-card">
+              <img src="images/home/pizza-9.jpg">
+              <a href="#"><i class="fas fa-heart"></i></a>
+              <a href="#"></a><i class="fas fa-share-alt share-i"></i></a>
+            </div>
+          </div>
+        <div class="footer"><a href="#">View more on Instagram</a></div>
+      </section>
+  </script>
 
   <script id="template-cart-product" type="text/x-handlebars-template">
     <li>
@@ -216,7 +337,7 @@
               <a class="btn-quantity" href="#more"><i class="fas fa-plus"></i></a>
             </div>
           </label>
-          <div> <!-- option-row -->
+          <div class="starter"> <!-- option-row -->
             <span class="booking-option-title">Starters</span>
             <div class="checkbox"> <!-- checkbox -->
               <label>
@@ -242,8 +363,8 @@
       </form>
     </div>
   </script>
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
+  <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src="vendor/range-slider.min.js"></script>
   <script src="js/app.js" type="module"></script>
